--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@
     text-align: center; 
     background: mediumseagreen; 
     border: 1px solid black; 
+    border-radius: 30px;
 } 
 
 .context-menu ul { 
