--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,8 @@
     text-align: center; 
     background: white; 
     border-radius: 30px;
+    border: 0.5px solid black;
+    box-shadow: 5px 5px 5px 5px black;
 } 
 
 .context-menu ul { 
