--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,38 +2,67 @@
 @import url(https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css);
 @import url('https://fonts.googleapis.com/css2?family=Charmonman:wght@400;700&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital@0;1&family=Satisfy&display=swap');
 
-*{
+* {
     font-family: "Clash Display";
 }
 
-.context-menu { 
-    position: absolute; 
-    text-align: center; 
-    background: white; 
+.context-menu {
+    position: absolute;
+    text-align: center;
+    background: white;
     border-radius: 30px;
     border: 0.5px solid black;
     box-shadow: 5px 5px 5px 5px black;
     padding: 10px;
-} 
+}
 
-.context-menu ul { 
-    padding: 0px; 
-    margin: 0px; 
-    min-width: 150px; 
-    list-style: none; 
-} 
+.context-menu ul {
+    padding: 0px;
+    margin: 0px;
+    min-width: 150px;
+    list-style: none;
+}
 
-.context-menu ul li { 
-    padding-bottom: 7px; 
-    padding-top: 7px; 
+.context-menu ul li {
+    padding-bottom: 7px;
+    padding-top: 7px;
     border-radius: 30px;
-} 
+}
 
-.context-menu ul li a { 
-    text-decoration: none; 
-    color: mediumseagreen; 
-} 
+.context-menu ul li a {
+    text-decoration: none;
+    color: mediumseagreen;
+}
 
-.context-menu ul li:hover { 
-    background: rgb(40, 136, 83); 
-} 
+.context-menu ul li:hover {
+    background: rgb(40, 136, 83);
+}
+
+.icon-bar {
+    width: 100%;
+
+    overflow: auto;
+}
+
+.icon-bar a {
+    float: left;
+    width: 20%;
+    text-align: center;
+    padding: 12px 0;
+    transition: all 0.3s ease;
+    color: black;
+    font-size: 36px;
+}
+
+.icon-bar a:hover {
+    background-color: #04aa6d;
+    color: #fff;
+}
+
+.active {
+    background-color: #04AA6D;
+}
+
+.icon-bar a.active {
+    color: #fff;
+}
