--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,29 @@
 @import url(https://api.fontshare.com/v2/css?f[]=clash-display@200,400,700,500,600,300&display=swap>);
 @import url(https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css);
-@import url('https://fonts.googleapis.com/css2?family=Charmonman:wght@400;700&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital@0;1&family=Satisfy&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Aclonica&family=Charmonman:wght@400;700&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Manrope:wght@200..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital@0;1&family=Satisfy&display=swap');
 
 * {
-    font-family: "Clash Display";
+    font-family: "Playfair Display";
 }
-body{
+
+body {
     margin: 0;
+}
+.top{
+    margin: 16px;
+    background-color: aqua;
+}
+#top{
+    background: mediumseagreen;
+}
+.top .left{
+    float: left;
+    margin: 8px;
+    width: 40%;
+}
+.top .left h1{
+    font-size: 70px;
+    font-weight: 300;
 }
 .context-menu {
     position: absolute;
@@ -33,12 +50,16 @@ body{
     text-decoration: none;
     color: mediumseagreen;
 }
-.context-menu ul li a:hover {
+
+.context-menu ul li:hover a {
     color: #fff;
 }
+
 .context-menu ul li:hover {
     background: rgb(40, 136, 83);
+    color: white;
 }
+
 /* width */
 ::-webkit-scrollbar {
     width: 3px;
