--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,22 +9,7 @@
 body {
     margin: 0;
 }
-.top{
-    margin: 16px;
-    background-color: aqua;
-}
-#top{
-    background: mediumseagreen;
-}
-.top .left{
-    float: left;
-    margin: 8px;
-    width: 40%;
-}
-.top .left h1{
-    font-size: 70px;
-    font-weight: 300;
-}
+
 .context-menu {
     position: absolute;
     text-align: center;
@@ -81,34 +66,108 @@ body {
 }
 
 .topnav {
+    position: relative;
     overflow: hidden;
-    background-color: none;
-    border: 1px solid;
-
-
-    border-color: mediumseagreen;
-    padding: 16px;
+    margin: 16px;
 }
 
 .topnav a {
-    float: right;
-    display: block;
-    color: mediumseagreen;
+    float: left;
+    color: #000000;
     text-align: center;
-    padding: 14px 30px;
+    padding: 16px;
     text-decoration: none;
     font-size: 17px;
 }
 
 .topnav a:hover {
-    background-color: mediumseagreen;
-    color: #f5f2eb;
+    background-color: #ddd;
+    color: black;
 }
 
 .topnav a.active {
-    float: left;
+    background: linear-gradient(to right, #5C4597,#1983C1,#17A1AF, #6EB630);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    font-size: 30px;
+    padding: 31px;
 }
 
-.topnav .icon {
+.topnav-centered a {
+    float: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.topnav-right {
+    float: right;
+}
+.topnava{
     display: none;
 }
+/* Responsive navigation menu (for mobile devices) */
+@media screen and (max-width: 600px) {
+
+    .topnav{
+        display: none;
+    }
+    
+    .topnava{
+        display: block;
+    }
+}
+.topnava {
+    overflow: hidden;
+  }
+  
+  .topnava a {
+    float: left;
+    display: block;
+    color: #000;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  .topnava a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  .topnava a.active {
+    background: linear-gradient(to right, #5C4597,#1983C1,#17A1AF, #6EB630);
+      -webkit-text-fill-color: transparent;
+      -webkit-background-clip: text;
+     
+  }
+  .topnav-right a:first-child{
+    background: linear-gradient(to right, #5C4597,#1983C1,#17A1AF, #6EB630);
+    color: white;
+  }
+  .topnava .icon {
+    display: none;
+  }
+  
+  @media screen and (max-width: 600px) {
+    .topnava a:not(:first-child) {display: none;}
+    .topnava a.icon {
+      float: right;
+      display: block;
+    }
+  }
+  
+  @media screen and (max-width: 600px) {
+    .topnava.responsive {position: relative;}
+    .topnava.responsive .icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    .topnava.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+  }
