--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,9 @@
 @import url(https://api.fontshare.com/v2/css?f[]=clash-display@200,400,700,500,600,300&display=swap>);
 @import url(https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css);
 @import url('https://fonts.googleapis.com/css2?family=Aclonica&family=Charmonman:wght@400;700&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Manrope:wght@200..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital@0;1&family=Satisfy&display=swap');
-
+@import url(https://fonts.cdnfonts.com/css/just-sans);
 * {
-    font-family: "Playfair Display";
+    font-family: "JUST Sans";
 }
 
 body {
